// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render empty forecast data if there is no data 1`] = `
<div>
  <div
    class="app container"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-4 col-12"
      >
        <button
          data-testid="search-button"
        >
          Search
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        There is no data to display
      </div>
    </div>
  </div>
</div>
`;

exports[`App should render forecast data if data available 1`] = `
<div>
  <div
    class="app container"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-4 col-12"
      >
        <button
          data-testid="search-button"
        >
          Search
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm col-12"
      >
        <div
          class="weather-item card"
        >
          <img
            class="card-img-top state-image"
            src="https://www.metaweather.com/static/img/weather/ste.svg"
          />
          <div
            class="card-body"
          >
            <div
              class="card-title h5"
            >
              Tuesday
            </div>
            <div
              class="card-subtitle h6"
            >
              state
            </div>
            <div
              class="temp-details"
            >
              <div>
                min: 11
              </div>
              <div>
                max: 11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
